syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.routeguide";
option java_outer_classname = "RouteGuideProto";

package resource_region_grpc_pb;


service ResourceRegion {
  rpc Health(HealthRequest) returns (HealthReply) {}
}

message HealthRequest {}

message HealthReply {
    string msg = 1;
    string err = 2;
}
